--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<div class="overlay"></div>
 		
 		<div class="mainContent">
+			<img src="images/brewery-logo.png" alt="">
 			<h1>Welcome to Brooklyn</h1>
 			<p>You must be of legal drinking age to enter this site.</p>
 			<div class="DOBDropdown">
