cleaning up code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>age</title>
+	<title>Brooklyn Brewery </title>
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -126,8 +126,7 @@
 					</select>
 				</div>
 			</div>
-
-
+			
 			<button id="enter-btn">Enter</button>
 			
 			<div class="emptyState">
