localStorage detecting remember me checkmark

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Brooklyn Brewery </title>
+	<link rel="stylesheet" href="styles/lib/custom-checkbox.css">
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -127,6 +128,11 @@
 				</div>
 			</div>
 			
+			<div class="rememberCheckbox">
+				<input id="checkbox-1" class="checkbox-custom" name="checkbox-1" type="checkbox">
+				<label for="checkbox-1" class="checkbox-custom-label">Remember me.</label>
+			</div>
+
 			<button id="enter-btn">Enter</button>
 			
 			<div class="emptyState">
